Testing hamburger bug on mobile

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -7,6 +7,15 @@
   left: 0;
   transition: 0.3s linear;
   z-index: 10;
+
+  p {
+    font-family: Nunito;
+  }
+
+  a {
+    font-family: Nunito;
+    text-decoration: none;
+  }
 }
 
 .NavContainerNoScroll {
@@ -62,13 +71,10 @@
   border: none;
   background: none;
   color: white;
-  font-size: 1rem;
-  font-family: Nunito;
+  font-size: 16px;
   font-weight: bold;
   padding: 10px 15px 10px 15px;
   border-radius: 10px;
-  text-decoration: none;
-
   transition: 0.3s linear;
 }
 
@@ -86,12 +92,10 @@
   border: none;
   background-color: #3672FF;
   color: white;
-  font-size: 1rem;
-  font-family: Nunito;
+  font-size: 16px;
   font-weight: bold;
   padding: 10px 25px 10px 25px;
   border-radius: 20px;
-  text-decoration: none;
   transition: 0.3s linear;
 }
 
